--- a/deploy_acebox.yml
+++ b/deploy_acebox.yml
@@ -5,6 +5,6 @@
   tasks:
            
   - name: Reboot the machine
-    command: /bin/sh /home/michiel_otten/reboot.sh
+    command: /bin/sh /opt/reboot.sh
     ignore_errors: no
     delegate_to: ace-box
